--- a/mouse.yml
+++ b/mouse.yml
@@ -6,9 +6,7 @@ dependencies:
   - python=3.8
   - pip
   - wheel
-  - numpy
   - pillow
-  - h5py
   - protobuf
   - pyyaml
   - pip:
@@ -27,3 +25,6 @@ dependencies:
       - typing-extensions==4.7.1
       - tensorboard==2.11.2
       - werkzeug==2.2.3
+      - h5py==3.11.0
+      - numpy==1.21.2
+      - pandas==2.0.3
